feat: remove the codebase related to workspace