@@ -65,16 +65,13 @@ import com.zextras.carbonio.chats.model.RoomCreationFieldsDto;
 import com.zextras.carbonio.chats.model.RoomDto;
 import com.zextras.carbonio.chats.model.RoomEditableFieldsDto;
 import com.zextras.carbonio.chats.model.RoomExtraFieldDto;
-import com.zextras.carbonio.chats.model.RoomRankDto;
 import com.zextras.carbonio.chats.model.RoomTypeDto;
 import java.io.File;
 import java.time.Clock;
 import java.time.Instant;
 import java.time.OffsetDateTime;
 import java.time.ZoneId;
-import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
@@ -144,21 +141,11 @@ class RoomServiceImplTest {
   private UUID roomGroup2Id;
   private UUID roomOneToOne1Id;
   private UUID roomOneToOne2Id;
-  private UUID roomWorkspace1Id;
-  private UUID roomWorkspace2Id;
-  private UUID roomWorkspace3Id;
-  private UUID roomChannel1Id;
-  private UUID roomChannel2Id;
 
   private Room roomGroup1;
   private Room roomGroup2;
   private Room roomOneToOne1;
   private Room roomOneToOne2;
-  private Room roomWorkspace1;
-  private Room roomWorkspace2;
-  private Room roomWorkspace3;
-  private Room roomChannel1;
-  private Room roomChannel2;
 
   @BeforeEach
   public void init() {
@@ -173,11 +160,6 @@ class RoomServiceImplTest {
     roomGroup2Id = UUID.fromString("0471809c-e0bb-4bfd-85b6-b7b9a1eca597");
     roomOneToOne1Id = UUID.fromString("86327874-40f4-47cb-914d-f0ce706d1611");
     roomOneToOne2Id = UUID.fromString("19e5717e-652d-409e-b4fa-87e8dff790c1");
-    roomWorkspace1Id = UUID.fromString("a4196800-ae80-48d9-a878-6d6cc2072282");
-    roomWorkspace2Id = UUID.fromString("0fd274e6-34fd-4379-8908-5f9d9d6d537d");
-    roomWorkspace3Id = UUID.fromString("1d165280-46d4-47ce-84dd-8db9b054f20f");
-    roomChannel1Id = UUID.fromString("b1ce21cb-1fd5-4920-815a-de00885533c2");
-    roomChannel2Id = UUID.fromString("742069b7-18b8-45b7-8ae1-7cd8dbd9c22f");
 
     roomGroup1 = Room.create();
     roomGroup1
@@ -220,76 +202,6 @@ class RoomServiceImplTest {
       .subscriptions(List.of(
         Subscription.create(roomOneToOne2, user1Id.toString()).owner(true),
         Subscription.create(roomOneToOne2, user2Id.toString()).owner(true)));
-
-    roomChannel1 = Room.create();
-    roomChannel1
-      .id(roomChannel1Id.toString())
-      .type(RoomTypeDto.CHANNEL)
-      .name("channel1")
-      .description("Channel one")
-      .parentId(roomWorkspace1Id.toString())
-      .rank(1)
-      .userSettings(List.of(
-        RoomUserSettings.create(roomChannel1, user2Id.toString()).mutedUntil(OffsetDateTime.now())));
-
-    roomChannel2 = Room.create();
-    roomChannel2
-      .id(roomChannel2Id.toString())
-      .type(RoomTypeDto.CHANNEL)
-      .name("channel2")
-      .description("Channel two")
-      .parentId(roomWorkspace1Id.toString())
-      .rank(8)
-      .userSettings(List.of(
-        RoomUserSettings.create(roomChannel2, user1Id.toString()).mutedUntil(OffsetDateTime.now()),
-        RoomUserSettings.create(roomChannel2, user3Id.toString()).mutedUntil(OffsetDateTime.now())));
-
-    roomWorkspace1 = Room.create();
-    roomWorkspace1
-      .id(roomWorkspace1Id.toString())
-      .type(RoomTypeDto.WORKSPACE)
-      .name("workspace1")
-      .description("Workspace one")
-      .subscriptions(List.of(
-        Subscription.create(roomWorkspace1, user1Id.toString()).owner(true),
-        Subscription.create(roomWorkspace1, user2Id.toString()).owner(false),
-        Subscription.create(roomWorkspace1, user3Id.toString()).owner(false)))
-      .userSettings(List.of(
-        RoomUserSettings.create(roomWorkspace1, user1Id.toString()).rank(1),
-        RoomUserSettings.create(roomWorkspace1, user2Id.toString()).rank(1),
-        RoomUserSettings.create(roomWorkspace1, user3Id.toString()).rank(1)))
-      .children(List.of(roomChannel1, roomChannel2));
-
-    roomWorkspace2 = Room.create();
-    roomWorkspace2
-      .id(roomWorkspace2Id.toString())
-      .type(RoomTypeDto.WORKSPACE)
-      .name("workspace2")
-      .description("Workspace two")
-      .subscriptions(List.of(
-        Subscription.create(roomWorkspace2, user1Id.toString()).owner(true),
-        Subscription.create(roomWorkspace2, user2Id.toString()).owner(false),
-        Subscription.create(roomWorkspace2, user3Id.toString()).owner(false)))
-      .userSettings(List.of(
-        RoomUserSettings.create(roomWorkspace2, user1Id.toString()).rank(10),
-        RoomUserSettings.create(roomWorkspace2, user2Id.toString()).rank(9),
-        RoomUserSettings.create(roomWorkspace2, user3Id.toString()).rank(8)))
-      .children(List.of(roomChannel1, roomChannel2));
-
-    roomWorkspace3 = Room.create();
-    roomWorkspace3
-      .id(roomWorkspace3Id.toString())
-      .type(RoomTypeDto.WORKSPACE)
-      .name("workspace3")
-      .description("Workspace three")
-      .subscriptions(List.of(
-        Subscription.create(roomWorkspace3, user1Id.toString()).owner(true),
-        Subscription.create(roomWorkspace3, user2Id.toString()).owner(false),
-        Subscription.create(roomWorkspace3, user3Id.toString()).owner(false)))
-      .userSettings(List.of(
-        RoomUserSettings.create(roomWorkspace3, user1Id.toString()).rank(3),
-        RoomUserSettings.create(roomWorkspace3, user2Id.toString()).rank(5),
-        RoomUserSettings.create(roomWorkspace3, user3Id.toString()).rank(8)));
   }
 
   @AfterEach
@@ -315,30 +227,19 @@ class RoomServiceImplTest {
     @DisplayName("Returns all rooms without members or user settings of which the authenticated user is a member")
     public void getRooms_testOkBasicRooms() {
       when(roomRepository.getByUserId(user1Id.toString(), false))
-        .thenReturn(Arrays.asList(roomGroup2, roomOneToOne1, roomWorkspace2));
-      when(roomUserSettingsRepository.getMapByRoomsIdsAndUserIdGroupedByRoomsIds(List.of(roomWorkspace2Id.toString()),
-        user1Id.toString()))
-        .thenReturn(Map.of(
-          roomWorkspace2Id.toString(), RoomUserSettings.create(roomWorkspace2, user1Id.toString()).rank(10)));
+        .thenReturn(Arrays.asList(roomGroup2, roomOneToOne1));
 
       List<RoomDto> rooms = roomService.getRooms(null, UserPrincipal.create(user1Id));
 
-      assertEquals(3, rooms.size());
+      assertEquals(2, rooms.size());
       assertEquals(roomGroup2Id.toString(), rooms.get(0).getId().toString());
       assertEquals(RoomTypeDto.GROUP, rooms.get(0).getType());
-      assertNull(rooms.get(0).getRank());
       assertEquals(roomOneToOne1Id.toString(), rooms.get(1).getId().toString());
       assertEquals(RoomTypeDto.ONE_TO_ONE, rooms.get(1).getType());
-      assertNull(rooms.get(1).getRank());
-      assertEquals(roomWorkspace2Id.toString(), rooms.get(2).getId().toString());
-      assertEquals(RoomTypeDto.WORKSPACE, rooms.get(2).getType());
-      assertEquals(10, rooms.get(2).getRank());
       assertNull(rooms.get(0).getMembers());
       assertNull(rooms.get(1).getMembers());
-      assertNull(rooms.get(2).getMembers());
       assertNull(rooms.get(0).getUserSettings());
       assertNull(rooms.get(1).getUserSettings());
-      assertNull(rooms.get(2).getUserSettings());
 
       assertEquals(OffsetDateTime.parse("2022-01-01T00:00:00Z"), rooms.get(0).getPictureUpdatedAt());
       assertNull(rooms.get(1).getPictureUpdatedAt());
@@ -348,54 +249,40 @@ class RoomServiceImplTest {
     @DisplayName("Returns all rooms with members and without user settings of which the authenticated user is a member")
     public void getRooms_testOkWithMembers() {
       when(roomRepository.getByUserId(user1Id.toString(), true))
-        .thenReturn(Arrays.asList(roomGroup1, roomOneToOne1, roomWorkspace1));
-      when(roomUserSettingsRepository.getMapByRoomsIdsAndUserIdGroupedByRoomsIds(List.of(roomWorkspace1Id.toString()),
-        user1Id.toString()))
-        .thenReturn(Map.of(
-          roomWorkspace1Id.toString(), RoomUserSettings.create(roomWorkspace1, user1Id.toString()).rank(1)));
+        .thenReturn(Arrays.asList(roomGroup1, roomOneToOne1));
 
       List<RoomDto> rooms = roomService.getRooms(List.of(RoomExtraFieldDto.MEMBERS), UserPrincipal.create(user1Id));
 
-      assertEquals(3, rooms.size());
+      assertEquals(2, rooms.size());
       assertEquals(roomGroup1Id.toString(), rooms.get(0).getId().toString());
       assertEquals(RoomTypeDto.GROUP, rooms.get(0).getType());
       assertEquals(roomOneToOne1Id.toString(), rooms.get(1).getId().toString());
       assertEquals(RoomTypeDto.ONE_TO_ONE, rooms.get(1).getType());
-      assertEquals(roomWorkspace1Id, rooms.get(2).getId());
-      assertEquals(RoomTypeDto.WORKSPACE, rooms.get(2).getType());
-      assertEquals(1, rooms.get(2).getRank());
       assertNotNull(rooms.get(0).getMembers());
       assertNotNull(rooms.get(1).getMembers());
-      assertNotNull(rooms.get(2).getMembers());
       assertNull(rooms.get(0).getUserSettings());
       assertNull(rooms.get(1).getUserSettings());
-      assertNull(rooms.get(2).getUserSettings());
     }
 
     @Test
     @DisplayName("Returns all rooms without members and with user settings of which the authenticated user is a member")
     public void getRooms_testOkWithSettings() {
       when(roomRepository.getByUserId(user1Id.toString(), false))
-        .thenReturn(Arrays.asList(roomGroup1, roomOneToOne1, roomWorkspace1));
+        .thenReturn(Arrays.asList(roomGroup1, roomOneToOne1));
       when(roomUserSettingsRepository.getMapGroupedByUserId(user1Id.toString())).thenReturn(Map.of(
-        roomWorkspace1Id.toString(), RoomUserSettings.create(roomWorkspace1, user1Id.toString()).rank(1)
+        roomGroup1.toString(), RoomUserSettings.create(roomGroup1, user1Id.toString()).mutedUntil(OffsetDateTime.now())
       ));
       List<RoomDto> rooms = roomService.getRooms(List.of(RoomExtraFieldDto.SETTINGS), UserPrincipal.create(user1Id));
 
-      assertEquals(3, rooms.size());
+      assertEquals(2, rooms.size());
       assertEquals(roomGroup1Id.toString(), rooms.get(0).getId().toString());
       assertEquals(RoomTypeDto.GROUP, rooms.get(0).getType());
       assertEquals(roomOneToOne1Id.toString(), rooms.get(1).getId().toString());
       assertEquals(RoomTypeDto.ONE_TO_ONE, rooms.get(1).getType());
-      assertEquals(roomWorkspace1Id, rooms.get(2).getId());
-      assertEquals(RoomTypeDto.WORKSPACE, rooms.get(2).getType());
-      assertEquals(1, rooms.get(2).getRank());
       assertNull(rooms.get(0).getMembers());
       assertNull(rooms.get(1).getMembers());
-      assertNull(rooms.get(2).getMembers());
       assertNotNull(rooms.get(0).getUserSettings());
       assertNotNull(rooms.get(1).getUserSettings());
-      assertNull(rooms.get(2).getUserSettings());
     }
 
     @Test
@@ -403,29 +290,24 @@ class RoomServiceImplTest {
     public void getRooms_testOkCompleteRooms() {
       UserPrincipal currentUser = UserPrincipal.create(user1Id);
       when(roomRepository.getByUserId(user1Id.toString(), true))
-        .thenReturn(Arrays.asList(roomGroup1, roomOneToOne1, roomWorkspace2));
+        .thenReturn(Arrays.asList(roomGroup1, roomOneToOne1));
       when(roomUserSettingsRepository.getMapGroupedByUserId(currentUser.getId())).thenReturn(Map.of(
         roomGroup1Id.toString(),
-        RoomUserSettings.create(roomGroup1, user1Id.toString()).mutedUntil(OffsetDateTime.now()),
-        roomWorkspace2Id.toString(), RoomUserSettings.create(roomWorkspace2, user1Id.toString()).rank(10)
+        RoomUserSettings.create(roomGroup1, user1Id.toString()).mutedUntil(OffsetDateTime.now())
       ));
       List<RoomDto> rooms =
         roomService.getRooms(List.of(RoomExtraFieldDto.MEMBERS, RoomExtraFieldDto.SETTINGS), currentUser);
 
-      assertEquals(3, rooms.size());
+      assertEquals(2, rooms.size());
       assertEquals(roomGroup1Id, rooms.get(0).getId());
       assertEquals(RoomTypeDto.GROUP, rooms.get(0).getType());
       assertEquals(roomOneToOne1Id, rooms.get(1).getId());
       assertEquals(RoomTypeDto.ONE_TO_ONE, rooms.get(1).getType());
-      assertEquals(roomWorkspace2Id, rooms.get(2).getId());
-      assertEquals(RoomTypeDto.WORKSPACE, rooms.get(2).getType());
 
       assertNotNull(rooms.get(0).getMembers());
       assertNotNull(rooms.get(1).getMembers());
-      assertNotNull(rooms.get(2).getMembers());
       assertNotNull(rooms.get(0).getUserSettings());
       assertNotNull(rooms.get(1).getUserSettings());
-      assertNull(rooms.get(2).getUserSettings());
       assertTrue(rooms.get(0).getUserSettings().isMuted());
       assertFalse(rooms.get(1).getUserSettings().isMuted());
     }
@@ -451,66 +333,6 @@ class RoomServiceImplTest {
       assertNotNull(room.getUserSettings());
       assertEquals(OffsetDateTime.parse("2022-01-01T00:00:00Z"), room.getPictureUpdatedAt());
       assertTrue(room.getUserSettings().isMuted());
-    }
-
-    @Test
-    @DisplayName("Returns the required workspace room with all members and room user settings")
-    public void getRoomById_workspaceTestOk() {
-      when(roomRepository.getById(roomWorkspace2Id.toString())).thenReturn(Optional.of(roomWorkspace2));
-      List<String> ids = new ArrayList<>();
-      ids.add(roomChannel1Id.toString());
-      ids.add(roomChannel2Id.toString());
-      ids.add(roomWorkspace2Id.toString());
-
-      when(roomUserSettingsRepository.getMapByRoomsIdsAndUserIdGroupedByRoomsIds(ids, user2Id.toString()))
-        .thenReturn(Map.of(
-          roomChannel1Id.toString(),
-          RoomUserSettings.create(roomChannel1, user2Id.toString()).mutedUntil(OffsetDateTime.now()),
-          roomWorkspace2Id.toString(),
-          RoomUserSettings.create(roomWorkspace2, user2Id.toString()).rank(5)));
-
-      RoomDto room = roomService.getRoomById(roomWorkspace2Id, UserPrincipal.create(user2Id));
-
-      assertEquals(roomWorkspace2Id, room.getId());
-      assertEquals(5, room.getRank());
-      assertEquals(3, room.getMembers().size());
-      assertTrue(room.getMembers().stream().anyMatch(member -> member.getUserId().equals(user1Id)));
-      assertTrue(room.getMembers().stream().anyMatch(member -> member.getUserId().equals(user2Id)));
-      assertTrue(room.getMembers().stream().anyMatch(member -> member.getUserId().equals(user3Id)));
-      assertNull(room.getUserSettings());
-
-      Optional<RoomDto> channel1 = room.getChildren().stream().filter(child -> roomChannel1Id.equals(child.getId()))
-        .findAny();
-      assertTrue(channel1.isPresent());
-      assertNotNull(channel1.get().getUserSettings());
-      assertTrue(channel1.get().getUserSettings().isMuted());
-      assertNull(channel1.get().getMembers());
-      Optional<RoomDto> channel2 = room.getChildren().stream().filter(child -> roomChannel2Id.equals(child.getId()))
-        .findAny();
-      assertTrue(channel2.isPresent());
-      assertNotNull(channel2.get().getUserSettings());
-      assertFalse(channel2.get().getUserSettings().isMuted());
-      assertNull(channel2.get().getMembers());
-    }
-
-    @Test
-    @DisplayName("Returns the required channel room with all members and room user settings")
-    public void getRoomById_channelTestOk() {
-      when(roomRepository.getById(roomChannel2Id.toString())).thenReturn(Optional.of(roomChannel2));
-      when(roomRepository.getById(roomWorkspace1Id.toString())).thenReturn(Optional.of(roomWorkspace1));
-
-      RoomDto room = roomService.getRoomById(roomChannel2Id, UserPrincipal.create(user2Id));
-
-      assertEquals(roomChannel2Id, room.getId());
-      assertEquals(8, room.getRank());
-      assertEquals(3, room.getMembers().size());
-      assertTrue(room.getMembers().stream().anyMatch(member -> member.getUserId().equals(user1Id)));
-      assertTrue(room.getMembers().stream().anyMatch(member -> member.getUserId().equals(user2Id)));
-      assertTrue(room.getMembers().stream().anyMatch(member -> member.getUserId().equals(user3Id)));
-
-      verify(roomRepository, times(1)).getById(roomChannel2Id.toString());
-      verify(roomRepository, times(2)).getById(roomWorkspace1Id.toString());
-      verifyNoMoreInteractions(roomRepository);
     }
 
     @Test
@@ -662,22 +484,6 @@ class RoomServiceImplTest {
         assertEquals(Status.BAD_REQUEST.getReasonPhrase(), exception.getHttpStatusPhrase());
         assertEquals("Bad Request - Too few members (required at least 3)", exception.getMessage());
       }
-
-      @Test
-      @DisplayName("When the request has the parent id on creating a group, it throws a 'bad request' exception")
-      public void createGroupRoom_errorWhenRequestHasParentId() {
-        RoomCreationFieldsDto creationFields = RoomCreationFieldsDto.create()
-          .name("room1")
-          .description("Room one")
-          .type(RoomTypeDto.GROUP)
-          .membersIds(List.of(user2Id, user3Id))
-          .parentId(UUID.randomUUID());
-        ChatsHttpException exception = assertThrows(BadRequestException.class, () ->
-          roomService.createRoom(creationFields, UserPrincipal.create(user1Id)));
-        assertEquals(Status.BAD_REQUEST.getStatusCode(), exception.getHttpStatusCode());
-        assertEquals(Status.BAD_REQUEST.getReasonPhrase(), exception.getHttpStatusPhrase());
-        assertEquals("Bad Request - Parent is allowed only for channel room", exception.getMessage());
-      }
     }
 
     @Nested
@@ -778,355 +584,6 @@ class RoomServiceImplTest {
         assertEquals(Status.CONFLICT.getStatusCode(), exception.getHttpStatusCode());
         assertEquals(Status.CONFLICT.getReasonPhrase(), exception.getHttpStatusPhrase());
         assertEquals("Conflict - The one to one room already exists for these users", exception.getMessage());
-      }
-
-      @Test
-      @DisplayName("When the request has the parent id on creating a group, it throws a 'bad request' exception")
-      public void createGroupRoom_errorWhenRequestHasParentId() {
-        RoomCreationFieldsDto creationFields = RoomCreationFieldsDto.create()
-          .name("room1")
-          .description("Room one")
-          .type(RoomTypeDto.ONE_TO_ONE)
-          .membersIds(List.of(user2Id))
-          .parentId(UUID.randomUUID());
-        ChatsHttpException exception = assertThrows(BadRequestException.class, () ->
-          roomService.createRoom(creationFields, UserPrincipal.create(user1Id)));
-        assertEquals(Status.BAD_REQUEST.getStatusCode(), exception.getHttpStatusCode());
-        assertEquals(Status.BAD_REQUEST.getReasonPhrase(), exception.getHttpStatusPhrase());
-        assertEquals("Bad Request - Parent is allowed only for channel room", exception.getMessage());
-      }
-    }
-
-    @Nested
-    @DisplayName("Create workspace room tests")
-    class CreateWorkspaceRoomTests {
-
-      @Test
-      @DisplayName("It creates the first workspace room and returns it")
-      public void createWorkspaceRoom_insertFirstWorkspaceTestOk() {
-        UserPrincipal mockUserPrincipal = UserPrincipal.create(user1Id);
-        when(userService.userExists(user2Id, mockUserPrincipal))
-          .thenReturn(true);
-        when(userService.userExists(user3Id, mockUserPrincipal))
-          .thenReturn(true);
-        when(
-          membersService.initRoomSubscriptions(eq(Arrays.asList(user2Id, user3Id)), any(Room.class),
-            eq(mockUserPrincipal)))
-          .thenReturn(Stream.of(user2Id, user3Id, user1Id).map(userId ->
-            Subscription.create(roomWorkspace1, userId.toString()).owner(userId.equals(user1Id))
-          ).collect(Collectors.toList()));
-        when(roomUserSettingsRepository.getWorkspaceMaxRanksMapGroupedByUsers(
-          List.of(user2Id.toString(), user3Id.toString(), user1Id.toString())))
-          .thenReturn(new HashMap<>());
-        when(roomRepository.insert(roomWorkspace1)).thenReturn(roomWorkspace1);
-
-        RoomCreationFieldsDto creationFields = RoomCreationFieldsDto.create()
-          .name("workspace1")
-          .description("Workspace one")
-          .type(RoomTypeDto.WORKSPACE)
-          .membersIds(List.of(user2Id, user3Id));
-        RoomDto room;
-        try (MockedStatic<UUID> uuid = Mockito.mockStatic(UUID.class)) {
-          uuid.when(UUID::randomUUID).thenReturn(roomWorkspace1Id);
-          uuid.when(() -> UUID.fromString(roomWorkspace1.getId())).thenReturn(roomWorkspace1Id);
-          uuid.when(() -> UUID.fromString(user1Id.toString())).thenReturn(user1Id);
-          uuid.when(() -> UUID.fromString(user2Id.toString())).thenReturn(user2Id);
-          uuid.when(() -> UUID.fromString(user3Id.toString())).thenReturn(user3Id);
-          room = roomService.createRoom(creationFields, mockUserPrincipal);
-        }
-        assertEquals(creationFields.getName(), room.getName());
-        assertEquals(creationFields.getDescription(), room.getDescription());
-        assertEquals(creationFields.getType(), room.getType());
-        assertEquals(3, room.getMembers().size());
-        assertTrue(room.getMembers().stream().anyMatch(member -> member.getUserId().equals(user1Id)));
-
-        assertTrue(room.getMembers().stream().anyMatch(member -> member.getUserId().equals(user2Id)));
-        assertTrue(room.getMembers().stream().anyMatch(member -> member.getUserId().equals(user3Id)));
-        assertTrue(
-          room.getMembers().stream().filter(member -> member.getUserId().equals(user1Id)).findAny().orElseThrow()
-            .isOwner());
-
-        assertEquals(1, room.getRank());
-
-        verify(eventDispatcher, times(1)).sendToUserQueue(
-          List.of(user1Id.toString(), user2Id.toString(), user3Id.toString()),
-          RoomCreatedEvent.create(user1Id, null).roomId(roomWorkspace1Id));
-        verifyNoMoreInteractions(eventDispatcher);
-        verifyNoInteractions(messageDispatcher);
-      }
-
-      @Test
-      @DisplayName("It creates the nth workspace room and returns it")
-      public void createWorkspaceRoom_insertNthWorkspaceTestOk() {
-        UserPrincipal mockUserPrincipal = UserPrincipal.create(user1Id);
-        when(userService.userExists(user2Id, mockUserPrincipal))
-          .thenReturn(true);
-        when(userService.userExists(user3Id, mockUserPrincipal))
-          .thenReturn(true);
-        when(
-          membersService.initRoomSubscriptions(eq(Arrays.asList(user2Id, user3Id)), any(Room.class),
-            eq(mockUserPrincipal)))
-          .thenReturn(Stream.of(user2Id, user3Id, user1Id).map(userId ->
-            Subscription.create(roomWorkspace2, userId.toString()).owner(userId.equals(user1Id))
-          ).collect(Collectors.toList()));
-        when(roomUserSettingsRepository.getWorkspaceMaxRanksMapGroupedByUsers(
-          List.of(user2Id.toString(), user3Id.toString(), user1Id.toString())))
-          .thenReturn(Map.of(
-            user1Id.toString(),
-            RoomUserSettings.create(Room.create().id(UUID.randomUUID().toString()), user1Id.toString()).rank(9),
-            user2Id.toString(),
-            RoomUserSettings.create(Room.create().id(UUID.randomUUID().toString()), user2Id.toString()).rank(8),
-            user3Id.toString(),
-            RoomUserSettings.create(Room.create().id(UUID.randomUUID().toString()), user3Id.toString()).rank(7)));
-
-        when(roomRepository.insert(roomWorkspace2)).thenReturn(roomWorkspace2);
-
-        RoomCreationFieldsDto creationFields = RoomCreationFieldsDto.create()
-          .name("workspace2")
-          .description("Workspace two")
-          .type(RoomTypeDto.WORKSPACE)
-          .membersIds(List.of(user2Id, user3Id));
-        RoomDto room;
-        try (MockedStatic<UUID> uuid = Mockito.mockStatic(UUID.class)) {
-          uuid.when(UUID::randomUUID).thenReturn(roomWorkspace2Id);
-          uuid.when(() -> UUID.fromString(roomWorkspace2.getId())).thenReturn(roomWorkspace2Id);
-          uuid.when(() -> UUID.fromString(user1Id.toString())).thenReturn(user1Id);
-          uuid.when(() -> UUID.fromString(user2Id.toString())).thenReturn(user2Id);
-          uuid.when(() -> UUID.fromString(user3Id.toString())).thenReturn(user3Id);
-          room = roomService.createRoom(creationFields, mockUserPrincipal);
-        }
-        assertEquals(creationFields.getName(), room.getName());
-        assertEquals(creationFields.getDescription(), room.getDescription());
-        assertEquals(creationFields.getType(), room.getType());
-        assertEquals(3, room.getMembers().size());
-        assertTrue(room.getMembers().stream().anyMatch(member -> member.getUserId().equals(user1Id)));
-        assertTrue(room.getMembers().stream().anyMatch(member -> member.getUserId().equals(user2Id)));
-        assertTrue(room.getMembers().stream().anyMatch(member -> member.getUserId().equals(user3Id)));
-        assertTrue(
-          room.getMembers().stream().filter(member -> member.getUserId().equals(user1Id)).findAny().orElseThrow()
-            .isOwner());
-        assertEquals(10, room.getRank());
-
-        verify(eventDispatcher, times(1)).sendToUserQueue(
-          List.of(user1Id.toString(), user2Id.toString(), user3Id.toString()),
-          RoomCreatedEvent.create(user1Id, null).roomId(roomWorkspace2Id));
-        verifyNoMoreInteractions(eventDispatcher);
-        verifyNoInteractions(messageDispatcher);
-      }
-
-      @Test
-      @DisplayName("There are less than two members when creating a group, it throws a 'bad request' exception")
-      public void createWorkspaceRoom_errorWhenMembersAreLessThanTwo() {
-        RoomCreationFieldsDto creationFields = RoomCreationFieldsDto.create()
-          .name("workspace1")
-          .description("Workspace one")
-          .type(RoomTypeDto.WORKSPACE)
-          .membersIds(List.of(user2Id));
-        ChatsHttpException exception = assertThrows(BadRequestException.class, () ->
-          roomService.createRoom(creationFields, UserPrincipal.create(user1Id)));
-        assertEquals(Status.BAD_REQUEST.getStatusCode(), exception.getHttpStatusCode());
-        assertEquals(Status.BAD_REQUEST.getReasonPhrase(), exception.getHttpStatusPhrase());
-        assertEquals("Bad Request - Too few members (required at least 3)", exception.getMessage());
-      }
-
-      @Test
-      @DisplayName("When the request has the parent id on creating a group, it throws a 'bad request' exception")
-      public void createGroupRoom_errorWhenRequestHasParentId() {
-        RoomCreationFieldsDto creationFields = RoomCreationFieldsDto.create()
-          .name("room1")
-          .description("Room one")
-          .type(RoomTypeDto.WORKSPACE)
-          .membersIds(List.of(user2Id, user3Id))
-          .parentId(UUID.randomUUID());
-        ChatsHttpException exception = assertThrows(BadRequestException.class, () ->
-          roomService.createRoom(creationFields, UserPrincipal.create(user1Id)));
-        assertEquals(Status.BAD_REQUEST.getStatusCode(), exception.getHttpStatusCode());
-        assertEquals(Status.BAD_REQUEST.getReasonPhrase(), exception.getHttpStatusPhrase());
-        assertEquals("Bad Request - Parent is allowed only for channel room", exception.getMessage());
-      }
-    }
-
-    @Nested
-    @DisplayName("Create channel room tests")
-    class CreateChannelRoomTests {
-
-      @Test
-      @DisplayName("Given channel creation fields, inserts first channel room in a workspace and returns its data")
-      public void createChannelRoom_firstChannelTestOk() {
-        when(roomRepository.getById(roomWorkspace1Id.toString())).thenReturn(Optional.of(roomWorkspace1));
-        when(roomRepository.getChannelMaxRanksByWorkspace(roomWorkspace1Id.toString())).thenReturn(Optional.empty());
-        when(roomRepository.insert(any(Room.class))).thenReturn(roomChannel1);
-        RoomDto room;
-        try (MockedStatic<UUID> uuid = Mockito.mockStatic(UUID.class)) {
-          uuid.when(UUID::randomUUID).thenReturn(roomChannel1Id);
-          uuid.when(() -> UUID.fromString(roomChannel1Id.toString())).thenReturn(roomChannel1Id);
-          uuid.when(() -> UUID.fromString(roomWorkspace1Id.toString())).thenReturn(roomWorkspace1Id);
-          uuid.when(() -> UUID.fromString(user1Id.toString())).thenReturn(user1Id);
-          uuid.when(() -> UUID.fromString(user2Id.toString())).thenReturn(user2Id);
-          uuid.when(() -> UUID.fromString(user3Id.toString())).thenReturn(user3Id);
-          room = roomService.createRoom(RoomCreationFieldsDto.create()
-            .name("channel1")
-            .description("Channel one")
-            .type(RoomTypeDto.CHANNEL)
-            .parentId(roomWorkspace1Id), UserPrincipal.create(user1Id));
-        }
-        assertEquals(roomChannel1Id, room.getId());
-        assertEquals("channel1", room.getName());
-        assertEquals("Channel one", room.getDescription());
-        assertEquals(RoomTypeDto.CHANNEL, room.getType());
-        assertEquals(3, room.getMembers().size());
-        assertTrue(room.getMembers().stream().anyMatch(member -> user1Id.equals(member.getUserId())));
-        assertTrue(
-          room.getMembers().stream().filter(member -> user1Id.equals(member.getUserId())).findAny().orElseThrow()
-            .isOwner());
-        assertTrue(room.getMembers().stream().anyMatch(member -> user2Id.equals(member.getUserId())));
-        assertTrue(room.getMembers().stream().anyMatch(member -> user3Id.equals(member.getUserId())));
-        assertEquals(1, room.getRank());
-        assertEquals(roomWorkspace1Id, room.getParentId());
-        assertNull(room.getPictureUpdatedAt());
-        verify(roomRepository, times(2)).getById(roomWorkspace1Id.toString());
-        verify(roomRepository, times(1)).insert(any(Room.class));
-        verify(roomRepository, times(1)).getChannelMaxRanksByWorkspace(roomWorkspace1Id.toString());
-
-        verify(eventDispatcher, times(1)).sendToUserQueue(
-          List.of(user1Id.toString(), user2Id.toString(), user3Id.toString()),
-          RoomCreatedEvent.create(user1Id, null).roomId(roomChannel1Id));
-        verify(messageDispatcher, times(1)).createRoom(roomChannel1, user1Id.toString());
-        verify(messageDispatcher, times(0)).addUsersToContacts(anyString(), anyString());
-        verifyNoMoreInteractions(roomRepository, eventDispatcher, messageDispatcher);
-      }
-
-      @Test
-      @DisplayName("Given channel creation fields, inserts nth channel room in a workspace and returns its data")
-      public void createChannelRoom_nthChannelTestOk() {
-        when(roomRepository.getById(roomWorkspace1Id.toString())).thenReturn(Optional.of(roomWorkspace1));
-        when(roomRepository.getChannelMaxRanksByWorkspace(roomWorkspace1Id.toString())).thenReturn(Optional.of(7));
-        when(roomRepository.insert(any(Room.class))).thenReturn(roomChannel2);
-        RoomDto room;
-        try (MockedStatic<UUID> uuid = Mockito.mockStatic(UUID.class)) {
-          uuid.when(UUID::randomUUID).thenReturn(roomChannel2Id);
-          uuid.when(() -> UUID.fromString(roomChannel2Id.toString())).thenReturn(roomChannel2Id);
-          uuid.when(() -> UUID.fromString(roomWorkspace1Id.toString())).thenReturn(roomWorkspace1Id);
-          uuid.when(() -> UUID.fromString(user1Id.toString())).thenReturn(user1Id);
-          uuid.when(() -> UUID.fromString(user2Id.toString())).thenReturn(user2Id);
-          uuid.when(() -> UUID.fromString(user3Id.toString())).thenReturn(user3Id);
-          room = roomService.createRoom(RoomCreationFieldsDto.create()
-            .name("channel2")
-            .description("Channel two")
-            .type(RoomTypeDto.CHANNEL)
-            .parentId(roomWorkspace1Id), UserPrincipal.create(user1Id));
-        }
-        assertEquals(roomChannel2Id, room.getId());
-        assertEquals("channel2", room.getName());
-        assertEquals("Channel two", room.getDescription());
-        assertEquals(RoomTypeDto.CHANNEL, room.getType());
-        assertEquals(3, room.getMembers().size());
-        assertTrue(room.getMembers().stream().anyMatch(member -> user1Id.equals(member.getUserId())));
-        assertTrue(
-          room.getMembers().stream().filter(member -> user1Id.equals(member.getUserId())).findAny().orElseThrow()
-            .isOwner());
-        assertTrue(room.getMembers().stream().anyMatch(member -> user2Id.equals(member.getUserId())));
-        assertTrue(room.getMembers().stream().anyMatch(member -> user3Id.equals(member.getUserId())));
-        assertEquals(8, room.getRank());
-        assertEquals(roomWorkspace1Id, room.getParentId());
-        assertNull(room.getPictureUpdatedAt());
-        verify(roomRepository, times(2)).getById(roomWorkspace1Id.toString());
-        verify(roomRepository, times(1)).insert(any(Room.class));
-        verify(roomRepository, times(1)).getChannelMaxRanksByWorkspace(roomWorkspace1Id.toString());
-
-        verify(eventDispatcher, times(1)).sendToUserQueue(
-          List.of(user1Id.toString(), user2Id.toString(), user3Id.toString()),
-          RoomCreatedEvent.create(user1Id, null).roomId(roomChannel2Id));
-        verify(messageDispatcher, times(1)).createRoom(roomChannel2, user1Id.toString());
-        verify(messageDispatcher, times(0)).addUsersToContacts(anyString(), anyString());
-        verifyNoMoreInteractions(roomRepository, eventDispatcher, messageDispatcher);
-      }
-
-      @Test
-      @DisplayName("Given channel creation fields, if there is at least a member returns a 'bad request' exception")
-      public void createChannelRoom_testErrorRequestWithMembers() {
-        ChatsHttpException exception = assertThrows(BadRequestException.class, () ->
-          roomService.createRoom(RoomCreationFieldsDto.create()
-            .name("channel2")
-            .description("Channel two")
-            .type(RoomTypeDto.CHANNEL)
-            .parentId(roomWorkspace1Id)
-            .membersIds(List.of(user2Id, user3Id)), UserPrincipal.create(user1Id)));
-        assertEquals(Status.BAD_REQUEST.getStatusCode(), exception.getHttpStatusCode());
-        assertEquals(Status.BAD_REQUEST.getReasonPhrase(), exception.getHttpStatusPhrase());
-        assertEquals("Bad Request - Channels don't admit members", exception.getMessage());
-      }
-
-      @Test
-      @DisplayName("Given channel creation fields, if there isn't the parent identifier returns a 'bad request' exception")
-      public void createChannelRoom_testErrorRequestWithoutParentId() {
-        ChatsHttpException exception = assertThrows(BadRequestException.class, () ->
-          roomService.createRoom(RoomCreationFieldsDto.create()
-            .name("channel2")
-            .description("Channel two")
-            .type(RoomTypeDto.CHANNEL), UserPrincipal.create(user1Id)));
-        assertEquals(Status.BAD_REQUEST.getStatusCode(), exception.getHttpStatusCode());
-        assertEquals(Status.BAD_REQUEST.getReasonPhrase(), exception.getHttpStatusPhrase());
-        assertEquals("Bad Request - Channel must have an assigned workspace", exception.getMessage());
-      }
-
-      @Test
-      @DisplayName("Given channel creation fields, if there isn't the requested workspace room returns a 'bad request' exception")
-      public void createChannelRoom_testErrorRequestedWorkspaceNotExists() {
-        UUID roomId = UUID.randomUUID();
-        ChatsHttpException exception;
-        try (MockedStatic<UUID> uuid = Mockito.mockStatic(UUID.class)) {
-          uuid.when(UUID::randomUUID).thenReturn(roomId);
-          uuid.when(() -> UUID.fromString(roomWorkspace2.getId())).thenReturn(roomWorkspace2Id);
-          exception = assertThrows(NotFoundException.class, () ->
-            roomService.createRoom(RoomCreationFieldsDto.create()
-              .name("channel2")
-              .description("Channel two")
-              .type(RoomTypeDto.CHANNEL)
-              .parentId(UUID.randomUUID()), UserPrincipal.create(user1Id)));
-        }
-        assertEquals(Status.NOT_FOUND.getStatusCode(), exception.getHttpStatusCode());
-        assertEquals(Status.NOT_FOUND.getReasonPhrase(), exception.getHttpStatusPhrase());
-        assertEquals(String.format("Not Found - Room '%s'", roomId), exception.getMessage());
-      }
-
-      @Test
-      @DisplayName("Given channel creation fields, if the authenticated user is not the workspace owner returns a 'forbidden' exception")
-      public void createChannelRoom_testErrorAuthenticatedUserIsNotWorkspaceOwner() {
-        when(roomRepository.getById(roomWorkspace1Id.toString())).thenReturn(Optional.of(roomWorkspace1));
-        ChatsHttpException exception;
-        try (MockedStatic<UUID> uuid = Mockito.mockStatic(UUID.class)) {
-          uuid.when(UUID::randomUUID).thenReturn(roomChannel2Id);
-          exception = assertThrows(ForbiddenException.class, () ->
-            roomService.createRoom(RoomCreationFieldsDto.create()
-              .name("channel2")
-              .description("Channel two")
-              .type(RoomTypeDto.CHANNEL)
-              .parentId(roomWorkspace1Id), UserPrincipal.create(user2Id)));
-        }
-        assertEquals(Status.FORBIDDEN.getStatusCode(), exception.getHttpStatusCode());
-        assertEquals(Status.FORBIDDEN.getReasonPhrase(), exception.getHttpStatusPhrase());
-        assertEquals(String.format("Forbidden - User '%s' is not an owner of room '%s'", user2Id, roomWorkspace1Id),
-          exception.getMessage());
-      }
-
-      @Test
-      @DisplayName("Given channel creation fields, if the parent isn't a workspace returns a 'bad request' exception")
-      public void insertChannelRoom_testErrorParentIsNotAWorkspace() {
-        when(roomRepository.getById(roomGroup1Id.toString())).thenReturn(Optional.of(roomGroup1));
-        ChatsHttpException exception;
-        try (MockedStatic<UUID> uuid = Mockito.mockStatic(UUID.class)) {
-          uuid.when(UUID::randomUUID).thenReturn(roomChannel2Id);
-          exception = assertThrows(BadRequestException.class, () ->
-            roomService.createRoom(RoomCreationFieldsDto.create()
-              .name("channel2")
-              .description("Channel two")
-              .type(RoomTypeDto.CHANNEL)
-              .parentId(roomGroup1Id), UserPrincipal.create(user1Id)));
-        }
-        assertEquals(Status.BAD_REQUEST.getStatusCode(), exception.getHttpStatusCode());
-        assertEquals(Status.BAD_REQUEST.getReasonPhrase(), exception.getHttpStatusPhrase());
-        assertEquals("Bad Request - Channel parent must be a workspace", exception.getMessage());
       }
     }
 
@@ -1312,35 +769,6 @@ class RoomServiceImplTest {
     }
 
     @Test
-    @DisplayName("Deletes the required workspace without channel")
-    public void deleteRoom_workspaceWithoutChannelTestOk() {
-      when(roomRepository.getById(roomWorkspace3Id.toString())).thenReturn(Optional.of(roomWorkspace3));
-
-      roomService.deleteRoom(roomWorkspace3Id, UserPrincipal.create(user1Id));
-
-      verify(eventDispatcher, times(1)).sendToUserQueue(
-        List.of(user1Id.toString(), user2Id.toString(), user3Id.toString()),
-        RoomDeletedEvent.create(user1Id, null).roomId(roomWorkspace3Id));
-      verifyNoMoreInteractions(eventDispatcher);
-      verifyNoInteractions(messageDispatcher);
-    }
-
-    @Test
-    @DisplayName("Deletes the required workspace with channel")
-    public void deleteRoom_workspaceWithChannelTestOk() {
-      when(roomRepository.getById(roomWorkspace1Id.toString())).thenReturn(Optional.of(roomWorkspace1));
-
-      roomService.deleteRoom(roomWorkspace1Id, UserPrincipal.create(user1Id));
-
-      verify(eventDispatcher, times(1)).sendToUserQueue(
-        List.of(user1Id.toString(), user2Id.toString(), user3Id.toString()),
-        RoomDeletedEvent.create(user1Id, null).roomId(roomWorkspace1Id));
-      verify(messageDispatcher, times(1)).deleteRoom(roomChannel1Id.toString(), user1Id.toString());
-      verify(messageDispatcher, times(1)).deleteRoom(roomChannel2Id.toString(), user1Id.toString());
-      verifyNoMoreInteractions(eventDispatcher, messageDispatcher);
-    }
-
-    @Test
     @DisplayName("If the room doesn't exist then throws a 'not found' exception")
     public void deleteRoom_testRoomNotExists() {
       ChatsHttpException exception = assertThrows(NotFoundException.class, () ->
@@ -1456,7 +884,7 @@ class RoomServiceImplTest {
         .getByRoomIdAndUserId(roomGroup1Id.toString(), user1Id.toString());
       verify(roomUserSettingsRepository, times(1))
         .save(RoomUserSettings.create(roomGroup1, user1Id.toString())
-          .mutedUntil(OffsetDateTime.ofInstant(Instant.parse("2022-01-01T00:00:00Z"), ZoneId.systemDefault())));
+          .mutedUntil(OffsetDateTime.ofInstant(Instant.parse("0001-01-01T00:00:00Z"), ZoneId.systemDefault())));
       verify(eventDispatcher, times(1)).sendToUserQueue(
         user1Id.toString(), RoomMutedEvent.create(user1Id, null).roomId(roomGroup1Id));
       verifyNoMoreInteractions(roomRepository, roomUserSettingsRepository, eventDispatcher);
@@ -1496,21 +924,6 @@ class RoomServiceImplTest {
         .getByRoomIdAndUserId(roomGroup1Id.toString(), user1Id.toString());
       verifyNoMoreInteractions(roomRepository, roomUserSettingsRepository);
       verifyNoInteractions(eventDispatcher);
-    }
-
-    @Test
-    @DisplayName("If the room is a workspace, it throws a 'bad request' exception")
-    void muteRoom_errorRoomIsWorkspace() {
-      when(roomRepository.getById(roomWorkspace2Id.toString())).thenReturn(Optional.of(roomWorkspace2));
-      ChatsHttpException exception = assertThrows(BadRequestException.class, () ->
-        roomService.muteRoom(roomWorkspace2Id, UserPrincipal.create(user1Id)));
-      assertEquals(Status.BAD_REQUEST.getStatusCode(), exception.getHttpStatusCode());
-      assertEquals(Status.BAD_REQUEST.getReasonPhrase(), exception.getHttpStatusPhrase());
-      assertEquals("Bad Request - Cannot mute a workspace", exception.getMessage());
-
-      verify(roomRepository, times(1)).getById(roomWorkspace2Id.toString());
-      verifyNoMoreInteractions(roomRepository);
-      verifyNoInteractions(eventDispatcher, roomUserSettingsRepository);
     }
 
     @Test
@@ -1598,21 +1011,6 @@ class RoomServiceImplTest {
         .getByRoomIdAndUserId(roomGroup1Id.toString(), user1Id.toString());
       verifyNoMoreInteractions(roomRepository, roomUserSettingsRepository);
       verifyNoInteractions(eventDispatcher);
-    }
-
-    @Test
-    @DisplayName("If the room is a workspace, it throws a 'bad request' exception")
-    void unmuteRoom_errorRoomIsWorkspace() {
-      when(roomRepository.getById(roomWorkspace2Id.toString())).thenReturn(Optional.of(roomWorkspace2));
-      ChatsHttpException exception = assertThrows(BadRequestException.class, () ->
-        roomService.unmuteRoom(roomWorkspace2Id, UserPrincipal.create(user1Id)));
-      assertEquals(Status.BAD_REQUEST.getStatusCode(), exception.getHttpStatusCode());
-      assertEquals(Status.BAD_REQUEST.getReasonPhrase(), exception.getHttpStatusPhrase());
-      assertEquals("Bad Request - Cannot unmute a workspace", exception.getMessage());
-
-      verify(roomRepository, times(1)).getById(roomWorkspace2Id.toString());
-      verifyNoMoreInteractions(roomRepository);
-      verifyNoInteractions(eventDispatcher, roomUserSettingsRepository);
     }
 
     @Test
@@ -2102,316 +1500,6 @@ class RoomServiceImplTest {
       verify(fileMetadataRepository, times(1)).getById(roomGroup1Id.toString());
       verifyNoMoreInteractions(roomRepository, fileMetadataRepository);
       verifyNoInteractions(storagesService, messageDispatcher, eventDispatcher);
-    }
-  }
-
-  @Nested
-  @DisplayName("Update workspaces rank tests")
-  class UpdateWorkspacesRankTests {
-
-    @Test
-    @DisplayName("Correctly update workspace rank ")
-    public void updateWorkspacesRank_testOk() {
-      RoomUserSettings userSettings1 = RoomUserSettings.create(roomWorkspace1, user2Id.toString()).rank(1);
-      RoomUserSettings userSettings2 = RoomUserSettings.create(roomWorkspace2, user2Id.toString()).rank(9);
-      RoomUserSettings userSettings3 = RoomUserSettings.create(roomWorkspace3, user2Id.toString()).rank(5);
-
-      Map<String, RoomUserSettings> userSettingsMap = Map.of(
-        roomWorkspace1Id.toString(), userSettings1,
-        roomWorkspace2Id.toString(), userSettings2,
-        roomWorkspace3Id.toString(), userSettings3
-      );
-      when(roomUserSettingsRepository.getWorkspaceMapGroupedByRoomId(user2Id.toString())).thenReturn(userSettingsMap);
-
-      roomService.updateWorkspacesRank(List.of(
-        RoomRankDto.create().roomId(roomWorkspace1Id).rank(3),
-        RoomRankDto.create().roomId(roomWorkspace2Id).rank(2),
-        RoomRankDto.create().roomId(roomWorkspace3Id).rank(1)), UserPrincipal.create(user2Id));
-
-      verify(roomUserSettingsRepository, times(1)).getWorkspaceMapGroupedByRoomId(user2Id.toString());
-
-      userSettingsMap.get(roomWorkspace3Id.toString()).rank(1);
-      userSettingsMap.get(roomWorkspace2Id.toString()).rank(2);
-      userSettingsMap.get(roomWorkspace1Id.toString()).rank(3);
-      verify(roomUserSettingsRepository, times(1)).save(userSettingsMap.values());
-
-      verifyNoMoreInteractions(roomUserSettingsRepository);
-    }
-
-    @Test
-    @DisplayName("If user workspaces are not compatible with the list, it throws a 'forbidden' exception")
-    public void updateWorkspacesRank_testWorkspaceNotCompatibleWithList() {
-      UUID ws1Id = UUID.fromString("471276a4-33f5-44c5-90b9-dd198c9330ae");
-      UUID ws2Id = UUID.fromString("51c874de-c262-4261-92dc-719f50a7f750");
-      UUID ws3Id = UUID.fromString("bff64789-8f16-4b6d-95fa-69505d63cbd4");
-      UUID ws4Id = UUID.fromString("deb5b4be-e2cf-487e-b089-6b0bc4dd213a");
-      RoomUserSettings us1 = RoomUserSettings
-        .create(Room.create().id(ws1Id.toString()).type(RoomTypeDto.WORKSPACE), user2Id.toString()).rank(5);
-      RoomUserSettings us2 = RoomUserSettings
-        .create(Room.create().id(ws2Id.toString()).type(RoomTypeDto.WORKSPACE), user2Id.toString()).rank(8);
-      RoomUserSettings us3 = RoomUserSettings
-        .create(Room.create().id(ws3Id.toString()).type(RoomTypeDto.WORKSPACE), user2Id.toString()).rank(13);
-      when(roomUserSettingsRepository.getWorkspaceMapGroupedByRoomId(user2Id.toString())).thenReturn(Map.of(
-        ws1Id.toString(), us1,
-        ws2Id.toString(), us2,
-        ws3Id.toString(), us3
-      ));
-
-      BadRequestException exception = assertThrows(BadRequestException.class, () ->
-        roomService.updateWorkspacesRank(List.of(
-          RoomRankDto.create().roomId(ws4Id).rank(3),
-          RoomRankDto.create().roomId(ws2Id).rank(2),
-          RoomRankDto.create().roomId(ws1Id).rank(1)), UserPrincipal.create(user2Id)));
-      assertEquals(Status.BAD_REQUEST.getStatusCode(), exception.getHttpStatusCode());
-      assertEquals(Status.BAD_REQUEST.getReasonPhrase(), exception.getHttpStatusPhrase());
-      assertEquals(
-        String.format("Bad Request - There isn't a workspace with id '%s' for the user id '%s'", ws4Id, user2Id),
-        exception.getMessage());
-
-      verify(roomUserSettingsRepository, times(1)).getWorkspaceMapGroupedByRoomId(user2Id.toString());
-      verifyNoMoreInteractions(roomUserSettingsRepository);
-    }
-
-    @Test
-    @DisplayName("If user workspaces are more than the list, it throws a 'forbidden' exception")
-    public void updateWorkspacesRank_testWorkspaceMoreThenList() {
-      UUID ws1Id = UUID.fromString("471276a4-33f5-44c5-90b9-dd198c9330ae");
-      UUID ws2Id = UUID.fromString("51c874de-c262-4261-92dc-719f50a7f750");
-      UUID ws4Id = UUID.fromString("deb5b4be-e2cf-487e-b089-6b0bc4dd213a");
-      RoomUserSettings us1 = RoomUserSettings
-        .create(Room.create().id(ws1Id.toString()).type(RoomTypeDto.WORKSPACE), user2Id.toString()).rank(5);
-      RoomUserSettings us2 = RoomUserSettings
-        .create(Room.create().id(ws2Id.toString()).type(RoomTypeDto.WORKSPACE), user2Id.toString()).rank(8);
-      when(roomUserSettingsRepository.getWorkspaceMapGroupedByRoomId(user2Id.toString())).thenReturn(Map.of(
-        ws1Id.toString(), us1,
-        ws2Id.toString(), us2
-      ));
-
-      BadRequestException exception = assertThrows(BadRequestException.class, () ->
-        roomService.updateWorkspacesRank(List.of(
-          RoomRankDto.create().roomId(ws4Id).rank(3),
-          RoomRankDto.create().roomId(ws2Id).rank(2),
-          RoomRankDto.create().roomId(ws1Id).rank(1)), UserPrincipal.create(user2Id)));
-      assertEquals(Status.BAD_REQUEST.getStatusCode(), exception.getHttpStatusCode());
-      assertEquals(Status.BAD_REQUEST.getReasonPhrase(), exception.getHttpStatusPhrase());
-      assertEquals("Bad Request - Too many elements compared to user workspaces", exception.getMessage());
-      verify(roomUserSettingsRepository, times(1)).getWorkspaceMapGroupedByRoomId(user2Id.toString());
-      verifyNoMoreInteractions(roomUserSettingsRepository);
-    }
-
-    @Test
-    @DisplayName("If user workspaces are less than the list, it throws a 'forbidden' exception")
-    public void updateWorkspacesRank_testWorkspaceLessThenList() {
-      UUID ws1Id = UUID.fromString("471276a4-33f5-44c5-90b9-dd198c9330ae");
-      UUID ws2Id = UUID.fromString("51c874de-c262-4261-92dc-719f50a7f750");
-      UUID ws3Id = UUID.fromString("bff64789-8f16-4b6d-95fa-69505d63cbd4");
-      RoomUserSettings us1 = RoomUserSettings
-        .create(Room.create().id(ws1Id.toString()).type(RoomTypeDto.WORKSPACE), user2Id.toString()).rank(5);
-      RoomUserSettings us2 = RoomUserSettings
-        .create(Room.create().id(ws2Id.toString()).type(RoomTypeDto.WORKSPACE), user2Id.toString()).rank(8);
-      RoomUserSettings us3 = RoomUserSettings
-        .create(Room.create().id(ws3Id.toString()).type(RoomTypeDto.WORKSPACE), user2Id.toString()).rank(13);
-      when(roomUserSettingsRepository.getWorkspaceMapGroupedByRoomId(user2Id.toString())).thenReturn(Map.of(
-        ws1Id.toString(), us1,
-        ws2Id.toString(), us2,
-        ws3Id.toString(), us3
-      ));
-
-      BadRequestException exception = assertThrows(BadRequestException.class, () ->
-        roomService.updateWorkspacesRank(List.of(
-          RoomRankDto.create().roomId(ws2Id).rank(2),
-          RoomRankDto.create().roomId(ws1Id).rank(1)), UserPrincipal.create(user2Id)));
-      assertEquals(Status.BAD_REQUEST.getStatusCode(), exception.getHttpStatusCode());
-      assertEquals(Status.BAD_REQUEST.getReasonPhrase(), exception.getHttpStatusPhrase());
-      assertEquals("Bad Request - Too few elements compared to user workspaces", exception.getMessage());
-
-      verify(roomUserSettingsRepository, times(1)).getWorkspaceMapGroupedByRoomId(user2Id.toString());
-      verifyNoMoreInteractions(roomUserSettingsRepository);
-    }
-
-    @Test
-    @DisplayName("If rank list is not progressive a progressive number sequence, it throws a 'bad request' exception")
-    public void updateWorkspacesRank_testRankListNotProgressiveNumberSequence() {
-      BadRequestException exception = assertThrows(BadRequestException.class, () ->
-        roomService.updateWorkspacesRank(List.of(
-          RoomRankDto.create().roomId(roomWorkspace1Id).rank(7),
-          RoomRankDto.create().roomId(roomWorkspace2Id).rank(9),
-          RoomRankDto.create().roomId(roomWorkspace3Id).rank(1)), UserPrincipal.create(user2Id)));
-      assertEquals(Status.BAD_REQUEST.getStatusCode(), exception.getHttpStatusCode());
-      assertEquals(Status.BAD_REQUEST.getReasonPhrase(), exception.getHttpStatusPhrase());
-      assertEquals("Bad Request - Ranks must be progressive number that starts with 1", exception.getMessage());
-
-      verifyNoMoreInteractions(roomUserSettingsRepository);
-    }
-
-    @Test
-    @DisplayName("If rank list has duplicated room identifier, it throws a 'bad request' exception")
-    public void updateWorkspacesRank_testRankListHasDuplicatedWorkspaceId() {
-      BadRequestException exception = assertThrows(BadRequestException.class, () ->
-        roomService.updateWorkspacesRank(List.of(
-          RoomRankDto.create().roomId(roomWorkspace1Id).rank(7),
-          RoomRankDto.create().roomId(roomWorkspace1Id).rank(9),
-          RoomRankDto.create().roomId(roomWorkspace3Id).rank(1)), UserPrincipal.create(user2Id)));
-      assertEquals(Status.BAD_REQUEST.getStatusCode(), exception.getHttpStatusCode());
-      assertEquals(Status.BAD_REQUEST.getReasonPhrase(), exception.getHttpStatusPhrase());
-      assertEquals("Bad Request - Rooms cannot be duplicated", exception.getMessage());
-
-      verifyNoMoreInteractions(roomUserSettingsRepository);
-    }
-  }
-
-  @Nested
-  @DisplayName("Updates channels rank tests")
-  public class UpdateChannelsRankTests {
-
-    @Test
-    @DisplayName("Correctly update workspace channels rank")
-    public void updateChannelsRank_testOk() {
-      UUID workspaceId = UUID.fromString("471276a4-33f5-44c5-90b9-dd198c9330ae");
-      UUID channel1Id = UUID.fromString("51c874de-c262-4261-92dc-719f50a7f750");
-      UUID channel2Id = UUID.fromString("bff64789-8f16-4b6d-95fa-69505d63cbd4");
-      UUID channel3Id = UUID.fromString("85184f58-a5a7-4fc5-a631-d2929e524a0f");
-
-      Room workspace = Room.create().id(workspaceId.toString()).type(RoomTypeDto.WORKSPACE);
-      workspace.subscriptions(List.of(Subscription.create(workspace, user1Id.toString()).owner(true)))
-        .children(List.of(
-          Room.create().id(channel1Id.toString()).type(RoomTypeDto.CHANNEL).parentId(workspaceId.toString()).rank(11),
-          Room.create().id(channel2Id.toString()).type(RoomTypeDto.CHANNEL).parentId(workspaceId.toString()).rank(7),
-          Room.create().id(channel3Id.toString()).type(RoomTypeDto.CHANNEL).parentId(workspaceId.toString()).rank(9)));
-      when(roomRepository.getById(workspaceId.toString())).thenReturn(Optional.of(workspace));
-
-      roomService.updateChannelsRank(workspaceId, List.of(
-        RoomRankDto.create().roomId(channel1Id).rank(1),
-        RoomRankDto.create().roomId(channel2Id).rank(2),
-        RoomRankDto.create().roomId(channel3Id).rank(3)
-      ), UserPrincipal.create(user1Id));
-
-      workspace.getChildren().stream().filter(child -> child.getId().equals(channel1Id.toString())).findAny()
-        .orElseThrow().rank(1);
-      workspace.getChildren().stream().filter(child -> child.getId().equals(channel2Id.toString())).findAny()
-        .orElseThrow().rank(2);
-      workspace.getChildren().stream().filter(child -> child.getId().equals(channel3Id.toString())).findAny()
-        .orElseThrow().rank(3);
-      verify(roomRepository, times(1)).getById(workspaceId.toString());
-      verify(roomRepository, times(1)).update(workspace);
-      verifyNoMoreInteractions(roomRepository);
-    }
-
-    @Test
-    @DisplayName("If workspace channels are not compatible with the list, it throws a 'bad request' exception")
-    public void updateChannelsRank_testChannelNotCompatibleWithList() {
-      UUID workspaceId = UUID.fromString("471276a4-33f5-44c5-90b9-dd198c9330ae");
-      UUID channel1Id = UUID.fromString("51c874de-c262-4261-92dc-719f50a7f750");
-      UUID channel2Id = UUID.fromString("bff64789-8f16-4b6d-95fa-69505d63cbd4");
-      UUID channel3Id = UUID.fromString("85184f58-a5a7-4fc5-a631-d2929e524a0f");
-
-      Room workspace = Room.create().id(workspaceId.toString()).type(RoomTypeDto.WORKSPACE);
-      workspace.subscriptions(List.of(Subscription.create(workspace, user1Id.toString()).owner(true)))
-        .children(List.of(
-          Room.create().id(channel1Id.toString()).type(RoomTypeDto.CHANNEL).parentId(workspaceId.toString()).rank(11),
-          Room.create().id(channel2Id.toString()).type(RoomTypeDto.CHANNEL).parentId(workspaceId.toString()).rank(7),
-          Room.create().id(channel3Id.toString()).type(RoomTypeDto.CHANNEL).parentId(workspaceId.toString()).rank(9)));
-      when(roomRepository.getById(workspaceId.toString())).thenReturn(Optional.of(workspace));
-      ChatsHttpException exception = assertThrows(BadRequestException.class, () ->
-        roomService.updateChannelsRank(workspaceId, List.of(
-          RoomRankDto.create().roomId(channel1Id).rank(1),
-          RoomRankDto.create().roomId(channel2Id).rank(2),
-          RoomRankDto.create().roomId(UUID.randomUUID()).rank(3)
-        ), UserPrincipal.create(user1Id)));
-
-      assertEquals(Status.BAD_REQUEST.getStatusCode(), exception.getHttpStatusCode());
-      assertEquals(Status.BAD_REQUEST.getReasonPhrase(), exception.getHttpStatusPhrase());
-      assertEquals(
-        String.format("Bad Request - Channel '%s' is not a child of workspace '%s'", channel3Id, workspaceId),
-        exception.getMessage());
-      verify(roomRepository, times(1)).getById(workspaceId.toString());
-      verifyNoMoreInteractions(roomRepository);
-    }
-
-    @Test
-    @DisplayName("If list rooms are less then the workspace channels, it throws a 'bad request' exception")
-    public void updateChannelsRank_testWorkspaceChannelsLessThenList() {
-      UUID workspaceId = UUID.fromString("471276a4-33f5-44c5-90b9-dd198c9330ae");
-      UUID channel1Id = UUID.fromString("51c874de-c262-4261-92dc-719f50a7f750");
-      UUID channel2Id = UUID.fromString("bff64789-8f16-4b6d-95fa-69505d63cbd4");
-      UUID channel3Id = UUID.fromString("85184f58-a5a7-4fc5-a631-d2929e524a0f");
-
-      Room workspace = Room.create().id(workspaceId.toString()).type(RoomTypeDto.WORKSPACE);
-      workspace.subscriptions(List.of(Subscription.create(workspace, user1Id.toString()).owner(true)))
-        .children(List.of(
-          Room.create().id(channel1Id.toString()).type(RoomTypeDto.CHANNEL).parentId(workspaceId.toString()).rank(11),
-          Room.create().id(channel2Id.toString()).type(RoomTypeDto.CHANNEL).parentId(workspaceId.toString()).rank(7),
-          Room.create().id(channel3Id.toString()).type(RoomTypeDto.CHANNEL).parentId(workspaceId.toString()).rank(9)));
-      when(roomRepository.getById(workspaceId.toString())).thenReturn(Optional.of(workspace));
-      ChatsHttpException exception = assertThrows(BadRequestException.class, () ->
-        roomService.updateChannelsRank(workspaceId, List.of(
-          RoomRankDto.create().roomId(channel1Id).rank(1),
-          RoomRankDto.create().roomId(channel2Id).rank(2)
-        ), UserPrincipal.create(user1Id)));
-
-      assertEquals(Status.BAD_REQUEST.getStatusCode(), exception.getHttpStatusCode());
-      assertEquals(Status.BAD_REQUEST.getReasonPhrase(), exception.getHttpStatusPhrase());
-      assertEquals("Bad Request - Too few elements compared to workspace channels", exception.getMessage());
-      verify(roomRepository, times(1)).getById(workspaceId.toString());
-      verifyNoMoreInteractions(roomRepository);
-    }
-
-    @Test
-    @DisplayName("If the list rooms are more then the workspace channels, it throws a 'bad request' exception")
-    public void updateChannelsRank_testWorkspaceChannelsMoreThenList() {
-      UUID workspaceId = UUID.fromString("471276a4-33f5-44c5-90b9-dd198c9330ae");
-      UUID channel1Id = UUID.fromString("51c874de-c262-4261-92dc-719f50a7f750");
-      UUID channel2Id = UUID.fromString("bff64789-8f16-4b6d-95fa-69505d63cbd4");
-
-      Room workspace = Room.create().id(workspaceId.toString()).type(RoomTypeDto.WORKSPACE);
-      workspace.subscriptions(List.of(Subscription.create(workspace, user1Id.toString()).owner(true)))
-        .children(List.of(
-          Room.create().id(channel1Id.toString()).type(RoomTypeDto.CHANNEL).parentId(workspaceId.toString()).rank(11),
-          Room.create().id(channel2Id.toString()).type(RoomTypeDto.CHANNEL).parentId(workspaceId.toString()).rank(7)));
-      when(roomRepository.getById(workspaceId.toString())).thenReturn(Optional.of(workspace));
-      ChatsHttpException exception = assertThrows(BadRequestException.class, () ->
-        roomService.updateChannelsRank(workspaceId, List.of(
-          RoomRankDto.create().roomId(channel1Id).rank(1),
-          RoomRankDto.create().roomId(channel2Id).rank(2),
-          RoomRankDto.create().roomId(UUID.randomUUID()).rank(3)
-        ), UserPrincipal.create(user1Id)));
-
-      assertEquals(Status.BAD_REQUEST.getStatusCode(), exception.getHttpStatusCode());
-      assertEquals(Status.BAD_REQUEST.getReasonPhrase(), exception.getHttpStatusPhrase());
-      assertEquals("Bad Request - Too many elements compared to workspace channels", exception.getMessage());
-      verify(roomRepository, times(1)).getById(workspaceId.toString());
-      verifyNoMoreInteractions(roomRepository);
-    }
-
-    @Test
-    @DisplayName("If rank list has duplicated room identifier, it throws a 'bad request' exception")
-    public void updateChannelsRank_testRankListHasDuplicatedWorkspaceId() {
-      UUID channel1Id = UUID.fromString("51c874de-c262-4261-92dc-719f50a7f750");
-      ChatsHttpException exception = assertThrows(BadRequestException.class, () ->
-        roomService.updateChannelsRank(UUID.randomUUID(), List.of(
-          RoomRankDto.create().roomId(channel1Id).rank(1),
-          RoomRankDto.create().roomId(channel1Id).rank(2),
-          RoomRankDto.create().roomId(UUID.randomUUID()).rank(3)
-        ), UserPrincipal.create(user1Id)));
-      assertEquals(Status.BAD_REQUEST.getStatusCode(), exception.getHttpStatusCode());
-      assertEquals(Status.BAD_REQUEST.getReasonPhrase(), exception.getHttpStatusPhrase());
-      assertEquals("Bad Request - Channels cannot be duplicated", exception.getMessage());
-      verifyNoInteractions(roomRepository);
-    }
-
-    @Test
-    @DisplayName("If rank list is not a progressive number sequence, it throws a 'bad request' exception")
-    public void updateChannelsRank_testRankListNotProgressiveNumberSequence() {
-      ChatsHttpException exception = assertThrows(BadRequestException.class, () ->
-        roomService.updateChannelsRank(UUID.randomUUID(), List.of(
-          RoomRankDto.create().roomId(UUID.randomUUID()).rank(1),
-          RoomRankDto.create().roomId(UUID.randomUUID()).rank(3),
-          RoomRankDto.create().roomId(UUID.randomUUID()).rank(5)
-        ), UserPrincipal.create(user1Id)));
-      assertEquals(Status.BAD_REQUEST.getStatusCode(), exception.getHttpStatusCode());
-      assertEquals(Status.BAD_REQUEST.getReasonPhrase(), exception.getHttpStatusPhrase());
-      assertEquals("Bad Request - Ranks must be progressive number that starts with 1", exception.getMessage());
-      verifyNoInteractions(roomRepository);
     }
   }
 
